# claude-code-tts-hooks

./: .env.example  CLAUDE.md  README.md  claude-code-kokoro-tts-permission.sh  claude-code-kokoro-tts-summary.sh  kokoro_server.py  pyproject.toml
.github/workflows/: test.yml
claude-code-hooks/: summary-tts.sh
claude_code_tts_server/: config.py  main.py
claude_code_tts_server/api/: models.py  routes.py
claude_code_tts_server/core/: audio_manager.py  sounds.py  transcript.py
tests/: conftest.py  test_api.py  test_sounds.py  test_transcript.py
