[project]
name = "claude-code-kokoro-tts"
version = "0.1.0"
description = "Audio feedback for Claude Code via text-to-speech"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kokoro",
    "numpy",
    "pip",
    "soundfile",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
kokoro-server = "kokoro_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro_server.py"]

[tool.hatch.build.targets.sdist]
only-include = ["kokoro_server.py", "pyproject.toml", "README.md"]

[tool.uv]
default-groups = []
