[project]
name = "claude-code-tts-server"
version = "0.0.1"
description = "Audio feedback for Claude Code via text-to-speech"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
    "click>=8.0",
    "pip>=25.0",
    "kokoro>=0.9.0",
    "numpy>=2.3.0",
    "soundfile>=0.13.0",
    "pyrubberband>=0.4.0",
]

[project.optional-dependencies]
speed = ["pyrubberband>=0.4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
tts-server = "claude_code_tts_server.main:main"
server = "claude_code_tts_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_tts_server"]

[tool.hatch.build.targets.sdist]
include = [
    "claude_code_tts_server/",
    "claude-code-hooks/",
    "pyproject.toml",
    "README.md",
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
